fix footer, content text does not fit under the footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,8 +49,11 @@
 
 .sidebar {
   position: relative;
-  background-image: url('/static/images/sidebar_white.jpeg');
+  background-color: #F5F5F5;
   background-size: cover;
+  border-width: 2px 0px 2px 0px;
+  border-style: solid none solid none;
+  border-color: #000000 #000000 #000000 #000000;
 }
 
 .sidebar::before {
@@ -69,21 +72,13 @@
   color: black;
 }
 
-.footer {
-  background-color: #C0C0C0;
-  background-size: cover;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  padding: 10px;
-}
-
-.content  {
-  background-color: #DCDCDC;
-}
-
 .home-image {
   opacity: 0.8;
   height: 500px;;
+}
 
+.page {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
